--- a/assets/css/components/navigation.css
+++ b/assets/css/components/navigation.css
@@ -177,7 +177,7 @@
     background-color: var(--primary-700);
     color: var(--neutral-200);
     padding: var(--space-8) 0 var(--space-4);
-    margin-top: var(--space-12);
+    /* margin-top: var(--space-12); */
   }
   
   .site-footer a {
